overflow bug fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'VT323', monospace;
+  overflow: hidden;
 }
 
 body,
